<resources>
    <string name="app_name">КВМ120</string>
    <string name="aviaagregat_N">Авиаагрегат-Н</string>
    <string name="tvRms">Действующее значение, кВ</string>
    <string name="tvAvr">Среднее значение, кВ</string>
    <string name="tvAmp">Амлитудное значение, кВ</string>
    <string name="tvFreq">Частота, Гц</string>
    <string name="defaultValue">-.---</string>
    <string name="tvRazmah">Размах</string>
    <string name="tvCoefficentAmp">Коэффициент амплитуды</string>
    <string name="tvCoefficentForm">Коэффициент формы</string>
    <string name="title_activity_burger">BurgerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="values">Значения</string>
    <string name="graph">График</string>
    <string name="dopvalues">Дополнительные</string>
    <string name="start">Старт</string>
    <string name="auto">Авто</string>
    <string name="pause">Пауза</string>
    <string name="stop">Стоп</string>
    <string name="start_record">Начать запись</string>
    <string name="stop_record">Стоп запись</string>
    <string name="apply">Применить</string>
    <string name="saveDot">Сохранить точку</string>
    <string name="settings">Настройки</string>
    <string name="parametrs_to_display">Какие параметры отображать:</string>
    <string-array name="values">
        <item>Действующее</item>
        <item>Среднее</item>
        <item>Амплитудное</item>
        <item>Форма</item>
        <item>Частота</item>
        <item>Коэффицент амплитуды</item>
        <item>Коэффицент формы</item>
    </string-array>
    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="time_record">Время записи:</string>
    <string name="averaging_time">Время усреднения, мс</string>
    <string name="protocols_dots">Протоколы точек</string>
    <string name="protocols_graphs">Протоколы графиков</string>
    <string name="protocols">Протоколы</string>
    <string name="viewing">Просмотр</string>
    <string name="dots">Точки</string>
    <string name="graphs">Графики</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="open">Открыть</string>
    <string name="select_protocol">Выберите протокол</string>
    <string name="about_us">О нас</string>
</resources>
