<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/navigation_menu">

    <group android:checkableBehavior="all">
        <item android:title="@string/viewing">
            <menu>
                <item
                    android:id="@+id/nav_values"
                    android:icon="@drawable/ic_baseline_format_list_numbered_24"
                    android:title="@string/values" />
                <item
                    android:id="@+id/nav_graph"
                    android:icon="@drawable/ic_baseline_timeline_24"
                    android:title="@string/graphs" />
            </menu>
        </item>

        <item android:title="@string/protocols">
            <menu>
                <item
                    android:id="@+id/nav_protocols_dots"
                    android:icon="@drawable/ic_baseline_scatter_plot_24"
                    android:title="@string/dots" />
                <item
                    android:id="@+id/nav_protocols_graphs"
                    android:icon="@drawable/ic_baseline_show_chart_24"
                    android:title="@string/graphs" />
            </menu>
        </item>
    </group>
</menu>