<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_values">

    <fragment
        android:id="@+id/nav_values"
        android:name="ru.avem.navitest.ui.values.ValuesFragment"
        android:label="@string/values"
        tools:layout="@layout/fragment_values" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="ru.avem.navitest.ui.graph.GraphFragment"
        android:label="@string/graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/nav_dopValues"
        android:name="ru.avem.navitest.ui.dopvalues.DopValuesFragment"
        android:label="@string/dopvalues"
        tools:layout="@layout/fragment_dopvalues" />
</navigation>